fixed margin issue on mobile

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shadows+Into+Light&display=swap');
 
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
 html {
   display: block;
 
@@ -12,8 +17,6 @@ body {
   font-family: 'Shadows Into Light', cursive;
   font-weight: 200;
   box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
   background-color: #2A3845;
        
 }
